--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,41 @@
 # SITE CONFIGURATION
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "0.0.0.0" # the base hostname & protocol for your site
+url: "https://die.tokyo/" # the base hostname & protocol for your site
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Joey Kirk
+  title: "SKEH"
   avatar: avatar.png
   gravatar: # Email MD5 hash
   description: "A website with blog posts and pages" # used by search engines
 
   # Header and footer text
   header_text: >
-     <h1>Designer, Developer, Writer, and Dad.</h1>
+     <h1>general みたものすべて width</h1>
   header_text_feature_image:
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>
 
   # Icons
   rss: false
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: "co@daisuke.co" # Full email address, e.g. "sam@example.com"
   behance:
-  bitbucket:
-  dribbble: "joeykirk"
-  facebook: "joeykirk"
-  flickr:
-  github: "madebymunsters/type-theme"
-  google_plus:
-  instagram: "joeykirk"
+  bitbucket: dai
+  dribbble: "barlog"
+  facebook: "daiskeh"
+  flickr: "barlog"
+  github: "dai"
+  google_plus: "+daisukeosada"
+  instagram: "daisukeosada"
   linkedin:  # Full URL
   pinterest:
   reddit:
   soundcloud:
   stack_exchange:  # Full URL
   steam:
-  tumblr:
-  twitter: "joeykirk"
+  tumblr: "dai"
+  twitter: "daisuke"
   wordpress:
   youtube:
 
