--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ theme_settings:
   github: "dai"
   google_plus: "+daisukeosada"
   instagram: "daisukeosada"
-  linkedin:  # Full URL
+  linkedin:  "https://www.linkedin.com/in/osada" # Full URL
   pinterest:
   reddit:
   soundcloud:
@@ -54,7 +54,7 @@ theme_settings:
 
   # Colours, typography and padding
   # Open the "_sass > base" folder, and open "_variables.scss"
-  google_fonts: "Source+Sans+Pro:400,700,700italic,400italic"
+  google_fonts: "Alegreya|Noto+Sans:400,700,700i"
 
 # PAGINATION
 paginate: 5
