--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,8 @@ theme_settings:
 
   # Colours, typography and padding
   # Open the "_sass > base" folder, and open "_variables.scss"
-  google_fonts: "Alegreya|Noto+Sans:400,700,700i"
+  google_fonts: "Fondamento:400,400i|Montserrat+Subrayada:400,700"
+
 
 # PAGINATION
 paginate: 5
