--- a/_config.yml
+++ b/_config.yml
@@ -1,75 +1,43 @@
-# SITE CONFIGURATION
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://die.tokyo/" # the base hostname & protocol for your site
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-# THEME-SPECIFIC CONFIGURATION
-theme_settings:
-  # Meta
-  title: "SKEH"
-  avatar: avatar.png
-  gravatar: # Email MD5 hash
-  description: "let's Overtaking." # used by search engines
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: test drive by daisuke osada
+email: 
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://die.tokyo/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: daisuke
+github_username:  dai
 
-  # Header and footer text
-  header_text: >
-     <h1>2020 Leaders of Tokyo </h1>
-  header_text_feature_image:
-  footer_text: >
-   Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>
-
-  # Icons
-  rss: false
-  email_address: "co@daisuke.co" # Full email address, e.g. "sam@example.com"
-  behance:
-  bitbucket: "dai"
-  dribbble: "dai"
-  facebook: "daiskeh"
-  flickr: "barlog"
-  github: "dai"
-  google_plus: "+daisukeosada"
-  instagram: "daisukeosada"
-  linkedin:  "https://www.linkedin.com/in/osada" # Full URL
-  pinterest:
-  reddit:
-  soundcloud:
-  stack_exchange:  # Full URL
-  steam:
-  tumblr: "dai"
-  twitter: "daisuke"
-  wordpress:
-  youtube:
-
-  # Scripts
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
-  disqus_shortname:
-  katex: true # Enable if using math markup
-
-  # Localization strings
-  str_follow_on: "Follow on"
-  str_rss_follow: "Follow RSS feed"
-  str_email: "Email"
-  str_next: "Next"
-  str_prev: "Prev"
-  str_continue_reading: "Continue reading"
-
-  # Colours, typography and padding
-  # Open the "_sass > base" folder, and open "_variables.scss"
-  google_fonts: "Fondamento:400,400i|Montserrat+Subrayada:400,700"
-
-
-# PAGINATION
-paginate: 1
-paginate_path: "blog/page:num"
-
-# COLLECTIONS
-collections:
-  portfolio:
-    output: true
-
-# BUILD SETTINGS
+# Build settings
 markdown: kramdown
-sass:
-  sass_dir: _sass
-  style: :compressed
+theme: minima
+plugins:
+  - jekyll-feed
 
-gems: [jekyll-paginate]
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
